Add perf the same project perf tests used for FIR for fe10 plugin